--- a/debian/changelog
+++ b/debian/changelog
@@ -1,18 +1,22 @@
-ledgersmb (1.6.5+ds-1~1) UNRELEASED; urgency=medium
+ledgersmb (1.6.5+ds-1~2) UNRELEASED; urgency=medium
 
   TODO:
     * Still pending 7 updates for debian/po/*po files.
   * New series 1.6.x Upstream Release (Closes: #903744)
   * Update debian/watch to use the 'download.ledgersmb.org' release site and
-    for the new 1.6.x series upsteam. (Closes: #868724)
+    for the new 1.6.x series upstream. (Closes: #868724)
   * Correct wording of Short-Description in debian/ledgersmb.init.
+  * Correct setting of the WORKING_DIRECTORY parameter in debian/ledgersmb.init.
+  * Update setting 'APP' in the debian/ledgersmb.init file for new upstream.
   * Change debian/rules target from 'get-orig-source' to 'get-original-source'
     and update the reference to it in debian/README.source.
+  * Replace 'libfile-mimeinfo-perl' with 'libmime-types-perl' in debian/control.
+  * Update the debian/ledgersmb.install for the new upstream version.
   * Redo debian/patches/10_lsmb-config.patch for new upstream version.
   * Redo debian/patches/15_lsmb-service.patch for new upstream version.
-  * Correct setting of the WORKING_DIRECTORY parameter in debian/ledgersmb.init.
+  * Update the 'override_dh_fixperms' target in debian/rules for new upstream.
 
- -- Robert James Clay <jame@rocasa.us>  Tue, 09 Oct 2018 23:37:22 -0400
+ -- Robert James Clay <jame@rocasa.us>  Thu, 11 Oct 2018 17:19:43 -0400
 
 ledgersmb (1.5.21+ds-2) unstable; urgency=medium
 
