--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
-ledgersmb (1.6.5+ds-1~3) UNRELEASED; urgency=medium
+ledgersmb (1.6.5+ds-1) unstable; urgency=medium
 
-  TODO:
-    * Still pending 7 updates for debian/po/*po files.
   * New series 1.6.x Upstream Release (Closes: #903744)
+  * Update the debian/ledgersmb.install for the new upstream version.
+  * Redo debian/patches/10_lsmb-config.patch for new upstream version.
+  * Redo debian/patches/15_lsmb-service.patch for new upstream version.
+  * Declare compliance with Debian Policy 4.2.1, no changes required.
   * Update debian/watch to use the 'download.ledgersmb.org' release site and
     for the new 1.6.x series upstream. (Closes: #868724)
   * Changes in debian/ldgersmb.init:
@@ -12,12 +14,9 @@ ledgersmb (1.6.5+ds-1~3) UNRELEASED; urgency=medium
   * Change debian/rules target from 'get-orig-source' to 'get-original-source'
     and update the reference to it in debian/README.source.
   * Replace 'libfile-mimeinfo-perl' with 'libmime-types-perl' in debian/control.
-  * Update the debian/ledgersmb.install for the new upstream version.
-  * Redo debian/patches/10_lsmb-config.patch for new upstream version.
-  * Redo debian/patches/15_lsmb-service.patch for new upstream version.
   * Update the 'override_dh_fixperms' target in debian/rules for new upstream.
 
- -- Robert James Clay <jame@rocasa.us>  Fri, 12 Oct 2018 14:59:34 -0400
+ -- Robert James Clay <jame@rocasa.us>  Fri, 12 Oct 2018 19:12:01 -0400
 
 ledgersmb (1.5.21+ds-2) unstable; urgency=medium
 
