--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ledgersmb (1.6.6+ds-1~1) UNRELEASED; urgency=medium
+
+  TODO:
+  * Update packaging as necessary for new upstream.
+
+ -- Robert James Clay <jame@rocasa.us>  Sun, 14 Oct 2018 22:21:04 -0400
+
 ledgersmb (1.6.5+ds-1) unstable; urgency=medium
 
   * New series 1.6.x Upstream Release (Closes: #903744)
