--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+ledgersmb (1.6.6+ds-2~1) UNRELEASED; urgency=medium
+
+  TODO:
+    * Pending completion of the Perl v5.28 transition in Debian Unstable.
+  * Changes to debian/control:
+    + Remove duplication of 'postgresql' from the Suggests stanza.
+    + Add 'lighttpd' & 'varnish' to the Web Proxies in the Recommends stanza.
+    + Add packages libio-stringy-perl, libdata-uuid-perl, libtext-markdown-perl,
+      and libplack-middleware-reverseproxy-perl to the Depends stanza.
+
+ -- Robert James Clay <jame@rocasa.us>  Sun, 11 Nov 2018 05:05:22 -0500
+
 ledgersmb (1.6.6+ds-1) unstable; urgency=medium
 
   * New upstream release.
